--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -183,7 +183,7 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -191,9 +191,9 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column="0" Grid.Row="0" Margin="10" Background="Bisque">
+        <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="10" Background="Bisque">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="2*"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -202,33 +202,40 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" ToolTip="Глубина резания"> t =</TextBlock>
             <TextBlock Grid.Row="1" ToolTip="Подача"> S =</TextBlock>
-            <DockPanel Grid.Row="2">
+            <TextBlock Grid.Row="2" ToolTip="Длина обрабатываемой поверхности"> L =</TextBlock>
+            <TextBlock Grid.Row="3" ToolTip="Диаметр заготовки"> D =</TextBlock>
+            
+            <DockPanel Grid.Row="4">
                 <TextBlock ToolTip="Выбор Материала">Материал</TextBlock>
                 <Button CommandParameter="Matirial" Style="{StaticResource ButtonPlus}" DockPanel.Dock="Right"/>
             </DockPanel>
-            <DockPanel Grid.Row="3">
+            <DockPanel Grid.Row="5">
                 <TextBlock ToolTip="Выбор Инструмента">Инструмент</TextBlock>
                 <Button CommandParameter="Tool" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
             </DockPanel>
-            <DockPanel Grid.Row="4">
+            <DockPanel Grid.Row="6">
                 <TextBlock ToolTip="Выбор Вида обработки">Вид обаботки</TextBlock>
                 <Button CommandParameter="Handling" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
             </DockPanel>
             <!--            Columns 1                -->
 
-            <TextBox Grid.Column="1" Grid.Row="0">2</TextBox>
-            <TextBox Grid.Column="1" Grid.Row="1">0.2</TextBox>
-            <ComboBox Grid.Column="1" Grid.Row="2"></ComboBox>
-            <ComboBox Grid.Column="1" Grid.Row="3"></ComboBox>
+            <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=T,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=S,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=L,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D,Mode=TwoWay}"></TextBox>            
             <ComboBox Grid.Column="1" Grid.Row="4"></ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="5"></ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="6"></ComboBox>
 
         </Grid>
 
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10" Background="Bisque">
-            <TextBlock Padding="10" Text="{Binding Path=CuttingSpeed,Mode=OneWay}"/>
+            <TextBlock Padding="10" Text="{Binding Path=CuttingSpeed,Mode=OneWay, UpdateSourceTrigger= PropertyChanged  }" />
             <TextBlock Padding="10" Text="{Binding Path=SpindleSpeed,Mode=OneWay}"/>
             <TextBlock Padding="10" Text="{Binding Path=ComputerTime,Mode=OneWay}"/>
             <TextBlock Padding="10" Text="{Binding Path= CuttingForce,Mode=OneWay}"/>
