--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -224,11 +224,11 @@
             </DockPanel>
             <!--            Columns 1                -->
 
-            <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=T,Mode=TwoWay}"></TextBox>
-            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=S,Mode=TwoWay}"></TextBox>
-            <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=L,Mode=TwoWay}"></TextBox>
-            <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D,Mode=TwoWay}"></TextBox>            
-            <ComboBox Grid.Column="1" Grid.Row="4"></ComboBox>
+            <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=T_DepthOfCut,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=S_Innings,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=L_LengthOfTheSurfaceToBeTreated,Mode=TwoWay}"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D_BilletDiameter,Mode=TwoWay}"></TextBox>
+            <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Matirials,Mode=OneWay}" />
             <ComboBox Grid.Column="1" Grid.Row="5"></ComboBox>
             <ComboBox Grid.Column="1" Grid.Row="6"></ComboBox>
 
