--- a/WpfApp1/DialogWindows/AddMatirial.xaml
+++ b/WpfApp1/DialogWindows/AddMatirial.xaml
@@ -31,15 +31,15 @@
         <TextBlock Grid.Column="0" Grid.Row="5">Kmv</TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="6">Kpv</TextBlock>
 
-        <TextBox Grid.Column="1" Grid.Row="0"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="1"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="2"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="3"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="5"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="6"></TextBox>
-                                 
-        <Button Grid.Column="1" Grid.Row="7" Content="Add"/>
+        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=Name}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Cv}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=Xv}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=Yv}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Path=Mv}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding Path=Kmv}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="6" Text="{Binding Path=Kpv}"></TextBox>
+
+        <Button Grid.Column="1" Grid.Row="7" Content="Add" Command="{Binding AddMatirial}"/>
 
     </Grid>
 </Window>
