--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -228,8 +228,8 @@
             <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=S_Innings,Mode=TwoWay}"></TextBox>
             <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=L_LengthOfTheSurfaceToBeTreated,Mode=TwoWay}"></TextBox>
             <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D_BilletDiameter,Mode=TwoWay}"></TextBox>
-            <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Matirials,Mode=OneWay}"  />
-            <ComboBox Grid.Column="1" Grid.Row="5"></ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Matirials,Mode=OneWay}" SelectedItem="{Binding MySelectedItemMatirial}"/>
+            <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Path=Tools,Mode=OneWay}" SelectedItem="{Binding MySelectedItemTool}"/>
             <ComboBox Grid.Column="1" Grid.Row="6"></ComboBox>
 
         </Grid>
