--- a/WpfApp1/DialogWindows/AddHandling.xaml
+++ b/WpfApp1/DialogWindows/AddHandling.xaml
@@ -26,14 +26,14 @@
         <TextBlock Grid.Column="0" Grid.Row="2">Xp</TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="3">Yp</TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="4">Np</TextBlock>
-        
-        <TextBox Grid.Column="1" Grid.Row="0"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="1"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="2"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="3"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
-       
 
-        <Button Grid.Column="1" Grid.Row="7" Content="Add"/>
+        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=Name,Mode=OneWayToSource}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Cp}"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=Xp}"/>
+        <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=Yp}"/>
+        <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Path=Np}"/>
+
+
+        <Button Grid.Column="1" Grid.Row="7" Content="Add" Command="{Binding AddHanding}"/>
     </Grid>
 </Window>
