--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -230,7 +230,7 @@
             <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D_BilletDiameter,Mode=TwoWay}"></TextBox>
             <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Matirials,Mode=OneWay}" SelectedItem="{Binding MySelectedItemMatirial}"/>
             <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Path=Tools,Mode=OneWay}" SelectedItem="{Binding MySelectedItemTool}"/>
-            <ComboBox Grid.Column="1" Grid.Row="6"></ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="6" ItemsSource="{Binding Path=Handlings,Mode=OneWay}" SelectedItem="{Binding MySelectedItemHandling}"></ComboBox>
 
         </Grid>
 
