--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="500" Width="800" MinHeight="450" MinWidth="660" >
     <Window.Resources>
         <Style x:Key="ButtonPlus" TargetType="Button">
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -181,6 +181,19 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </Window.Resources>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="Window.SizeChanged">
+            <BeginStoryboard>
+                <Storyboard>
+                    <ThicknessAnimation
+                                To="0,0,0,0"
+                                Duration="0:0:0.0"
+                                Storyboard.TargetProperty="Margin" 
+                                Storyboard.TargetName="ExitPanel"/>
+                </Storyboard>
+            </BeginStoryboard>
+        </EventTrigger>
+    </Window.Triggers>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -253,7 +266,7 @@
                         <RotateTransform Angle="-90"/>
                     </TextBlock.LayoutTransform>
                 </TextBlock>
-                <ToggleButton.Triggers>
+                <ToggleButton.Triggers>                    
                     <EventTrigger RoutedEvent="ToggleButton.Checked">
                         <BeginStoryboard>
                             <Storyboard>
