--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -266,7 +266,7 @@
                         <RotateTransform Angle="-90"/>
                     </TextBlock.LayoutTransform>
                 </TextBlock>
-                <ToggleButton.Triggers>                    
+                <ToggleButton.Triggers>
                     <EventTrigger RoutedEvent="ToggleButton.Checked">
                         <BeginStoryboard>
                             <Storyboard>
@@ -291,18 +291,20 @@
                     </EventTrigger>
                 </ToggleButton.Triggers>
             </ToggleButton>
-            
+
             <Grid Background="Aqua" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Path=SpindleSpeedSourse}"></TextBox>
-                <Button Grid.Row="1" Command="{Binding AddNewValueSpindleSpeed}">
-                    temp text
+                <TextBox Text="{Binding Path=SpindleSpeedReal}"></TextBox>
+                <Button Grid.Row="1" Command="{Binding AddNewValueSpindleSpeed}" >
+                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center" >
+                    Установить фактическую скорость вращения шпинделя
+                    </TextBlock>
                 </Button>
             </Grid>
         </Grid>
