--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -227,15 +227,15 @@
 
             <DockPanel Grid.Row="4">
                 <TextBlock ToolTip="Выбор Материала">Материал</TextBlock>
-                <Button CommandParameter="Matirial" Style="{StaticResource ButtonPlus}" DockPanel.Dock="Right"/>
+                <Button ToolTip="Добавление Материала" CommandParameter="Matirial" Style="{StaticResource ButtonPlus}" DockPanel.Dock="Right"/>
             </DockPanel>
             <DockPanel Grid.Row="5">
                 <TextBlock ToolTip="Выбор Инструмента">Инструмент</TextBlock>
-                <Button CommandParameter="Tool" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
+                <Button  ToolTip="Добавление Инструмента" CommandParameter="Tool" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
             </DockPanel>
             <DockPanel Grid.Row="6">
                 <TextBlock ToolTip="Выбор Вида обработки">Вид обаботки</TextBlock>
-                <Button CommandParameter="Handling" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
+                <Button ToolTip="Добавление Вида обработки" CommandParameter="Handling" Style="{StaticResource ButtonPlus}"  DockPanel.Dock="Right" />
             </DockPanel>
             <!--            Columns 1                -->
 
@@ -245,9 +245,11 @@
             <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=S_Innings,Mode=TwoWay}"></TextBox>
             <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=L_LengthOfTheSurfaceToBeTreated,Mode=TwoWay}"></TextBox>
             <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=D_BilletDiameter,Mode=TwoWay}"></TextBox>
-            <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Materials,Mode=OneWay}" SelectedItem="{Binding MySelectedItemMaterial}"/>
-            <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Path=Tools,Mode=OneWay}" SelectedItem="{Binding MySelectedItemTool}"/>
-            <ComboBox Grid.Column="1" Grid.Row="6" ItemsSource="{Binding Path=Handlings,Mode=OneWay}" SelectedItem="{Binding MySelectedItemHandling}"></ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=Materials,Mode=OneWay}"   SelectedItem="{Binding MySelectedItemMaterial}"     ToolTip="Выбор Материала">
+                
+            </ComboBox>
+            <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Path=Tools,Mode=OneWay}"       SelectedItem="{Binding MySelectedItemTool}"         ToolTip="Выбор Инструмента"/>
+            <ComboBox Grid.Column="1" Grid.Row="6" ItemsSource="{Binding Path=Handlings,Mode=OneWay}"   SelectedItem="{Binding MySelectedItemHandling}"     ToolTip="Выбор Вида обработки" />
 
         </Grid>
 
@@ -298,7 +300,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <TextBox Text="{Binding Path=SpindleSpeedReal}"></TextBox>
                 <Button Grid.Row="1" Command="{Binding AddNewValueSpindleSpeed}" >
@@ -309,7 +311,7 @@
             </Grid>
         </Grid>
 
-        <StackPanel Grid.Column="1" Grid.Row="1" Margin="10" Background="Bisque">
+        <StackPanel ToolTip="Ответ" Grid.Column="1" Grid.Row="1" Margin="10" Background="Bisque">
             <TextBlock Padding="10" Text="{Binding Path=CuttingSpeed,Mode=OneWay, UpdateSourceTrigger= PropertyChanged  }" />
             <TextBlock Padding="10" Text="{Binding Path=SpindleSpeed,Mode=OneWay}"/>
             <TextBlock Padding="10" Text="{Binding Path=ComputerTime,Mode=OneWay}"/>
